[project]
name = "bug-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.58",
    "langchain-ollama>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "python-bugzilla==3.3.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
